# QuadControl

./: .gitignore  CMakeLists.txt  Calculate_Points+RealTime.py  height_measurement.txt  height_measurement2.txt  measurement_pts.csv  rigidtrans.py  unload_drivers.sh
.VSCodeCounter/2021-07-22_15-00-25/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2021-07-26_14-22-31/: details.md  results.csv  results.md  results.txt
include/: FTDI_helpers.h  MPC.h  crc.h  hoveringFlight.h  kalman.h  missionPlanning.h  pid.h  planTrajectory.h  quad.h  serial_helpers.h  threads.h  time_helper.h
src/: FTDI_helpers.c  cameraThread.c  consoleThread.c  crc.c  hoveringFlight.c  ioThread.c  logThread.c  main.c  missionPlanning.c  pid.c  pipeThread.c  planTrajectory.c  serialThread.c  serial_helpers.c  time_helper.c
